--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-#
+# Machine_Exercise
+
+I attended in a Machine learning course in Coursera website. I did use Octave Programming language for solving exercise.
