--- a/Exercise_1/Readme
+++ b/Exercise_1/Readme
@@ -1,3 +1,10 @@
 # Machine_Exercise
 
-I attended in a Machine learning course in Coursera website. I did use Octave Programming language for solving exercise.
+In this exercise, they want to examine our basic knowledge of Programming languages. 
+
+
+We should know that the syntax of Octave is very similar to that of Matalab!
+
+For example we can use the following piece of code to print a 4 by 4 identity matrix.
+
+A = eye(4);
